# drone-manage-mcp

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/.gstack/: browse-audit.jsonl  browse.json  claude-available.json  terminal-agent-pid  terminal-internal-token
backend/app/: config.py  main.py
backend/app/agent/: graph.py  llm_runner.py  scripted.py  tools.py
backend/app/agui/: events.py
backend/app/core/: batch.py  confirm.py  drones.py  geo.py  plots.py  preflight.py  routes.py  store.py  tasks.py
backend/app/data/: mock_data.py
backend/app/datasource/: __init__.py  real.py  weather.py
backend/app/mcp_servers/: base.py  drone_dispatch.py  flight_task.py  nacos_registry.py  preflight.py  route_planning.py
backend/tests/: conftest.py  test_safety_redline.py  test_tools_contract.py
deploy/: .env.example  README.md  docker-compose.yml
docs/: 建议场景.md  开发计划.md  技术实现路线推荐.md  演示日checklist.md  界面原型.html  界面设计.md
正式开发/mcp-services/: .env.example  README.md  pyproject.toml
正式开发/mcp-services/scripts/: contract_smoke.py  register_gateway_instances.py  smoke_e2e.py  smoke_gateway.py
正式开发/mcp-services/src/uav_mcp/: __init__.py  alerts.py  approval.py  auth.py  batch.py  config.py  device_lock.py  dock_debug.py  drone_manage.py  drones.py  flight_control.py  geo.py  identity.py  live.py  media.py  nacos_registry.py  plots.py  preflight.py  routes.py  runner.py  schedule.py  state.py  tasks.py  ui_client.py  weather.py  zones.py
正式开发/mcp-services/src/uav_mcp/servers/: __init__.py  airspace.py  alert.py  dock_debug.py  drone_dispatch.py  flight_control.py  flight_task.py  live.py  media.py  preflight.py  route_planning.py  task_schedule.py
正式开发/mcp-services/tests/: test_approval_safety.py  test_auth_middleware.py  test_device_lock.py  test_geo_wkt.py  test_identity.py  test_p1_safety.py  test_platform_auth.py
正式开发/uav_extensions/: README.md  pyproject.toml
正式开发/uav_extensions/src/uav_extensions/: __init__.py  approval_service.py  bff.py  interceptors.py  nacos_bridge.py  ui_service.py
正式开发/uav_extensions/tests/: test_approval_service.py  test_interceptors.py
(+71 files in other folders)
