[project]
name = "uav-agent-backend"
version = "0.1.0"
description = "无人机智能体后端：业务原子层 + MCP 工具层 + LangGraph 单 Agent + AG-UI SSE"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "langgraph>=0.2.60",
    "langchain>=0.3.14",
    "langchain-openai>=0.3.0",
    "mcp>=1.2.0",
    "python-dotenv>=1.0",
    "nacos-sdk-python>=3.2.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
