[project]
name = "uav-mcp-services"
version = "0.1.0"
description = "无人机飞控 Agent 平台 · FastMCP 业务服务（四域：调度/航线/飞前/飞行任务），直连 drone-manage，注册 Nacos"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
nacos-ref = ["nacos-sdk-python>=2.0"]  # 仅 NACOS_ENDPOINT_MODE=ref（gRPC 临时实例）需要
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uav_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
